Finally fix the overview list layout bug; minor adjustments

--- a/src/fe/components/overview-list.less
+++ b/src/fe/components/overview-list.less
@@ -174,6 +174,17 @@
                 }
             }
         }
+
+        .overview-list-item {
+            border-radius: 4px;
+
+            &::before {
+                top: 2px;
+                left: 4px;
+                right: 4px;
+                bottom: 2px;
+            }
+        }
     }
 
     &.stale .list-contents {
